# Hyacine_Gallery

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1023370cb824_add_raw_file_fields_to_artwork_images.py  1eb341faa705_add_friend_links_table.py  45c09593b0be_add_artwork_sources_and_phash.py  527724bb0d1d_add_title_zh_to_artworks.py  973cfca7611c_add_tag_types_table.py  a1b2c3d4e5f6_add_users_table.py  b2c3d4e5f6a1_add_authors_table.py  bcc6fe9f6022_add_bot_channels_and_bot_settings_tables.py  c3d4e5f6a1b2_user_extensions.py  c414762592f7_initial_schema.py  c88e9f55b01f_add_artwork_embeddings_table.py  daebc514a259_add_bot_post_queue_table.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: embedding_api.py  embedding_local.py  factory.py  llm_openai.py  nsfw_detector.py  polisher.py  providers.py  search.py  tagger.py  vector_cache.py
backend/app/api/: admin.py  artworks.py  auth.py  authors.py  bot.py  dependencies.py  images.py  links.py  router.py  tags.py  users.py
backend/app/crawlers/: __init__.py  base.py  bilibili.py  gallery_dl.py  miyoushe.py  pixiv.py  twitter.py
backend/app/models/: __init__.py  artwork.py  author.py  bot.py  site.py  user.py  webauthn.py
backend/app/schemas/: artwork.py  author.py  bot.py  common.py  site.py  tag.py
backend/app/services/: artwork_service.py  auth_service.py  author_service.py  bot_service.py  cleanup_service.py  fts_service.py  queue_service.py  reverse_search_service.py  storage_service.py  tag_dedup_service.py  tag_service.py  webauthn_service.py
backend/tests/: conftest.py
backend/tests/ai/: test_factory.py  test_nsfw_detector.py  test_polisher.py  test_search.py  test_tagger.py  test_vector_cache.py
backend/tests/api/: test_admin_api.py  test_artworks_api.py  test_auth_api.py  test_authors_api.py  test_bot_api.py  test_dependencies.py  test_links_api.py  test_tags_api.py  test_users_api.py
backend/tests/crawlers/: test_bilibili.py  test_dispatcher.py  test_gallery_dl.py  test_miyoushe.py  test_pixiv.py  test_twitter.py
backend/tests/services/: test_artwork_service.py  test_auth_service.py  test_author_service.py  test_bot_service.py  test_cleanup_service.py  test_fts_service.py  test_queue_service.py  test_reverse_search_service.py  test_storage_service.py  test_tag_dedup_service.py  test_tag_service.py  test_webauthn_service.py
bots/telegram/: .dockerignore  Dockerfile  client.py  config.py  main.py  pyproject.toml
bots/telegram/handlers/: __init__.py  artwork.py  basic.py  original.py  photo.py  queue.py  settings.py
bots/telegram/tests/: conftest.py  test_client.py  test_handlers_artwork.py  test_handlers_basic.py  test_handlers_original.py  test_handlers_photo.py  test_handlers_queue.py
deploy/: install-systemd.sh  uninstall-systemd.sh
(+49 files in other folders)
